--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.3.3",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
@@ -45,6 +46,7 @@
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
