--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
+    "next-intl": "^4.3.4",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
