--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
