--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
+    "query-string": "^9.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
